<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="300dp"
        android:layout_marginTop="276dp"

        android:drawablePadding="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout

      android:id="@+id/box1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="350dp">


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"

            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="24sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/viewCoursesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ic_background_button"
        android:fontFamily="sans-serif"
        android:onClick="sendVerifyEmail"
        android:textAlignment="center"
        android:text="@string/Verifybutton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box1" />



    <Button
        android:id="@+id/Verify"
        android:layout_width="339dp"
        android:layout_height="43dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_background_button"
        android:fontFamily="sans-serif"
        android:onClick="btn_course"
        android:text="@string/ViewCourse"
        android:textAlignment="center"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCoursesButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="232dp"
        android:layout_height="59dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/nibm_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/nibm_logo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="310dp"
        android:layout_height="627dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="340dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image1" />


</androidx.constraintlayout.widget.ConstraintLayout>



